# Cassandra

./: .gitignore  README.md
CassandraNet/: .dockerignore  .env.example  Cargo.toml  docker-compose.yml
CassandraNet/.github/workflows/: ci.yml
CassandraNet/cnagent/: Cargo.toml
CassandraNet/cnagent/src/: main.rs
CassandraNet/cnbackend/src/requests/: mod.rs  request.rs  requestdb.rs
CassandraNet/cncommon/: Cargo.toml
CassandraNet/cncommon/src/: auth.rs  lib.rs
CassandraNet/cncommon/src/observability/: logging.rs  metrics.rs  mod.rs
CassandraNet/cncommon/src/profile/: cnprofile.rs  mod.rs
CassandraNet/cnproto/: Cargo.toml  build.rs
CassandraNet/cnproto/proto/: agent.proto  messaging.proto  orchestration.proto  ugc.proto
CassandraNet/cnproto/src/: lib.rs
CassandraNet/cnsdk_c/: Cargo.toml
CassandraNet/cnsdk_c/include/: cassandra.h
CassandraNet/cnsdk_c/src/: lib.rs
CassandraNet/core/: Cargo.toml  build.rs
CassandraNet/core/migrations/: 0001_init.sql  0002_titles_nodes.sql  0003_node_metrics.sql  0004_ugc.sql  0005_agent_enhancements.sql  0006_service_workloads.sql
CassandraNet/core/src/: build_info.rs  lib.rs
CassandraNet/core/src/platform/: auth.rs  error.rs  mod.rs  models.rs  orchestration.rs  persistence.rs  provisioning.rs  registry.rs
CassandraNet/docker/: Dockerfile.agent  Dockerfile.frontend  Dockerfile.gateway  nginx.conf
CassandraNet/docs/: docker.md  windows_build_setup.md
CassandraNet/frontend/: README.md
CassandraNet/frontend/console/: index.html  package-lock.json  package.json  vite.config.ts
CassandraNet/frontend/console/src/: App.tsx  main.tsx  styles.css  types.ts
CassandraNet/frontend/console/src/components/: AgentDetailPanel.tsx  AgentsTable.tsx  Sparkline.tsx  StatCard.tsx  StatusBadge.tsx
CassandraNet/gateway/: Cargo.toml  README.md  build.rs
CassandraNet/gateway/src/: auth.rs  cli.rs  grpc.rs  http.rs  main.rs  metrics.rs  state.rs  tests.rs
CassandraNet/peripherals/: ARCHITECTURE.md  README.md  go.mod
CassandraNet/peripherals/cmd/log-pipeline/: main.go
CassandraNet/peripherals/cmd/messaging-service/: main.go
CassandraNet/peripherals/cmd/metrics-collector/: main.go
CassandraNet/peripherals/cmd/notification/: main.go
CassandraNet/peripherals/cmd/orchestrator/: main.go
CassandraNet/peripherals/cmd/ugc-service/: main.go
CassandraNet/peripherals/cmd/ugc-worker/: main.go
CassandraNet/peripherals/internal/config/: config.go
CassandraNet/peripherals/internal/logging/: logging.go
CassandraNet/peripherals/internal/logpipeline/: http.go  http_test.go  pipeline.go  pipeline_test.go  ring_buffer.go  stdout_sink.go
CassandraNet/peripherals/internal/messaging/: http.go  memory_store.go  service.go  types.go
CassandraNet/peripherals/internal/metricscollector/: aggregator.go  aggregator_test.go  http.go  http_test.go
CassandraNet/peripherals/internal/notification/: history.go  sender.go  service.go  service_test.go  templates.go  templates_test.go  types.go
CassandraNet/peripherals/internal/orchestration/: http.go  memory_store.go  service.go  types.go
CassandraNet/peripherals/internal/server/: server.go
CassandraNet/peripherals/internal/ugc/: http.go  memory_store.go  service.go  types.go
CassandraNet/peripherals/internal/ugcworker/: http.go  http_test.go  policy.go  policy_test.go  types.go  worker.go  worker_test.go
CassandraNet/tests/: comination_tests.rs
