[package]
name = "cncore"
version = "0.1.0"
edition = "2021"
authors = ["WD Studios L.L.C."]
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14"
thiserror = "1"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","signal"] }
cfg-if = "1"
subtle = "2"
uuid = { version = "1", features = ["v4","serde"] }
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
cncommon = { path = "../cncommon" }

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock","std"] }

[dependencies.sqlx]
optional = true
version = "0.7"
default-features = false
features = ["runtime-tokio-native-tls","postgres","macros","uuid","migrate"]

[features]
# placeholder for future database/backends
default = []
db = ["sqlx"]
